--- a/index.html
+++ b/index.html
@@ -2,11 +2,93 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Top 5 videojocs</title>
-    <link rel="icon" href="img/logo.jpeg">
+    <link rel="stylesheet" type="text/css" href="./css/style.index.css">
+    <link rel="stylesheet" type="text/css" href="./css/style.videojocs.css">
+    <title>Top 5 videojuegos</title>
+    <link rel="icon" href="img/logo.jpeg" type="image/x-icon">
 </head>
-<body>
-    
+<nav>
+    <ul>
+        <li><a href="./view/F1.html">F1</a></li>
+        <li><a href="./view/FIFA24.html">FIFA24</a></li>
+        <li><a href="./view/GTAV.html">GTAV</a></li>
+        <li><a href="./view/MINECRAFT.html">Minecraft</a></li>
+        <li><a href="./view/NBA2K24.html">NBA 2K24</a></li>
+    </ul>
+</nav>
+<body class="estilo1">
+    <div>
+        <h1 class="textoCentrado">Top 5 videjuegos</h1>
+        <p class="textoDerecha">El propósito de nuestra tienda de videojuegos es mas enfocada a la gente que le gusta los deportes y aventuras , con cinco juegos de alta calidad. Con estos juegos tendras una experiencia inolvidable.</p>
+    </div>
+    <div class="row">
+        <div class="col-33">
+            <div>
+                <p class="textoBlanco">Grand Theft Auto V</p>
+            </div>
+            <div>
+                <a href="./view/GTAV.html"><img id="tamaño-img" src="img/gtav.jpeg"></a>
+            </div>
+        </div>
+        <div class="col-33">
+            <div>
+                <p class="textoBlanco">Formula 1 2024</p>
+            </div>
+            <div>
+                <a href="./view/F1.html"><img id="tamaño-img" src="img/f1.jpeg"></a>
+            </div>
+        </div>
+        <div class="col-33">
+            <div>
+               <p class="textoBlanco">FIFA 24</p>
+            </div>
+            <div>
+                <a href="./view/FIFA24.html"><img id="tamaño-img" src="img/fifa.jpeg"></a>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-50">
+            <div>
+                <p class="textoBlanco">Minecraft</p>
+            </div>
+            <div>
+                <a href="./view/MINECRAFT.html"><img id="tamaño-img" src="img/minecraftjpeg.jpeg"></a>
+            </div>
+        </div>
+        <div class="col-50">
+            <div>
+                <p class="textoBlanco">NBA 2K 24</p>
+            </div>
+            <div>
+                <a href="./view/NBA2K24.html"><img id="tamaño-img" src="img/nba.jpg"></a>
+            </div>
+        </div>
+    </div>
+    <div class="row fondoNegro">
+		<div>
+			<p class="Texto4">Contactenos:</p>
+		</div>
+	</div>
+	<div class="row fondoNegro">
+		<div class="col-25">
+			<p class="Texto5 Texto5bold">Nombres y Apellidos</p>
+            <p class="Texto5">Marc Jorquera Turmo y Mario Fernandez Calvo</p>
+		</div>
+		<div class="col-25">
+			<p class="Texto5 Texto5bold">Numero de telefono</p>
+            <p class="Texto5">685 025 847</p>
+		</div>
+		<div class="col-25">
+			<p class="Texto5 Texto5bold">Correo</p>
+            <p class="Texto5">mm.10@gmail.com</p>
+		</div>
+        <div class="col-25">
+			<p class="Texto5 Texto5bold">Direccion</p>
+            <p class="Texto5">C/ Nou de la Rambla, 22 Ciutat Vella, 08001 Barcelona</p>
+		</div>
+	</div>
 </body>
 </html>
